@@ -1,0 +1,11 @@
+/*
+ * $Id$
+ *
+ * Copyright 2020 Allen D. Ball.  All rights reserved.
+ */
+/**
+ * AWS S3 Maven Wagon Provider
+ *
+ * @author {@link.uri mailto:ball@iprotium.com Allen D. Ball}
+ */
+package ball.maven.wagon.providers.s3;
